templates/devhub/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: devhub
  name: devhub
