templates/devhub/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: devhub
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
  labels:
    app: devhub
    component: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: devhub
    component: api
